--- a/project/public/css/main.css
+++ b/project/public/css/main.css
@@ -1409,3 +1409,7 @@ main {
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%); }
+
+.not-found {
+  background: url(./public/img/404_bg.jpeg) no-repeat;
+}
